data/all_generated_tests/raw_wast_tests/return_MismanagementofBlockNesting_2781.wast
;; 10. **Test Description:**     - Implement a function with nested multiple control flow structures, using constructs like `block`, `loop`, `if`, and `br_if`, leading to a `return` on a true condition within `if`.     - Ensure different stack heights and control flows before invoking `return`.     - This evaluates if `return` can appropriately identify the outermost function context amidst complex control flows.     - **Specific Constraint:** Mismanagement of nested multi-control flow structures and stack unwinding on `return`.

(assert_invalid
  (module
    (func $test-nested-control-return (result i32)
      (i32.const 1)
      (block $outer
        (block $inner
          (loop $loop
            (if (i32.const 0) 
              (then
                (br_if $inner (i32.const 1))
              )
            )
            (br $loop)
          )
        )
        (return (i32.const 0))
      )
    )
  )
  "type mismatch"
)